@@ -49,13 +49,13 @@ gncal_week_view_init (GncalWeekView *wview)
 }
 
 GtkWidget *
-gncal_week_view_new (Calendar *calendar, time_t start_of_week)
+gncal_week_view_new (GnomeCalendar *calendar, time_t start_of_week)
 {
 	GncalWeekView *wview;
 	int i;
-#if 0
+
 	g_return_val_if_fail (calendar != NULL, NULL);
-#endif
+
 	wview = gtk_type_new (gncal_week_view_get_type ());
 
 	wview->table.homogeneous = TRUE; /* FIXME: eeeeeeeeeek, GtkTable does not have a function to set this */
