@@ -1,3 +1,10 @@
+1998-04-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gncal-day-view.c (gncal_day_view_update): Day events are now
+	cached inside the widget.  They get initialized at this time.
+
+	* view-utils.c (view_utils_draw_events): Use the list of events. 
+
 1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gncal-day-view.c (gncal_day_view_set_shadow): New customization
